--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "folktale": "^2.3.2",
     "lenses": "^0.1.0",
-    "pointfree-fantasy": "^0.1.3"
+    "pointfree-fantasy": "^0.1.3",
+    "rxjs": "^6.6.3",
+    "rxjs-stream": "^3.2.1",
+    "split": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
