--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "inline unit testing tool",
   "main": "main.js",
   "dependencies": {
+    "data.task": "^3.1.2",
     "folktale": "^2.3.2",
     "lenses": "^0.1.0",
     "pointfree-fantasy": "^0.1.3",
