--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "dependencies": {
     "data.task": "^3.1.2",
+    "findit": "^2.0.0",
     "folktale": "^2.3.2",
+    "get-stdin": "^8.0.0",
     "lenses": "^0.1.0",
     "pointfree-fantasy": "^0.1.3",
     "rxjs": "^6.6.3",
